--- a/be/composer.json
+++ b/be/composer.json
@@ -1,10 +1,12 @@
 {
   "require": {
-    "vlucas/phpdotenv": "^5.6"
+    "vlucas/phpdotenv": "^5.6",
+    "phpmailer/phpmailer": "^6.10"
   },
   "autoload": {
     "psr-4": {
-      "App\\": "app/"
+      "App\\": "app/",
+      "Config\\": "config/"
     }
   }
 }
