--- a/fe/package.json
+++ b/fe/package.json
@@ -11,6 +11,7 @@
     "antd": "^5.27.4",
     "axios": "^1.12.2",
     "bootstrap": "^5.3.8",
+    "js-cookie": "^3.0.5",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.2",
