--- a/be/.htaccess
+++ b/be/.htaccess
@@ -21,3 +21,11 @@
 #         Allow from all
 #     </IfModule>
 # </FilesMatch> -->
+
+
+<IfModule mod_headers.c>
+  Header set Access-Control-Allow-Origin "*"
+  Header set Access-Control-Allow-Methods "GET, POST, OPTIONS"
+  Header set Access-Control-Allow-Headers "Content-Type, Authorization"
+</IfModule>
+
