--- a/be/.htaccess
+++ b/be/.htaccess
@@ -25,7 +25,7 @@
 
 <IfModule mod_headers.c>
   Header set Access-Control-Allow-Origin "*"
-  Header set Access-Control-Allow-Methods "GET, POST,DELETE, OPTIONS"
+  Header set Access-Control-Allow-Methods "GET, POST,DELETE, PUT, OPTIONS"
   Header set Access-Control-Allow-Headers "Content-Type, Authorization"
 </IfModule>
 
