--- a/admin/package.json
+++ b/admin/package.json
@@ -17,6 +17,7 @@
     "react-router-dom": "^7.9.2",
     "react-scripts": "5.0.1",
     "react-slick": "^0.31.0",
+    "recharts": "^3.5.1",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
