--- a/be/.htaccess
+++ b/be/.htaccess
@@ -20,7 +20,7 @@
 #     <IfModule !mod_authz_core.c>
 #         Allow from all
 #     </IfModule>
-# </FilesMatch> -->
+# </FilesMatch> 
 
 
 <IfModule mod_headers.c>
